--- a/torchtune/todo.txt
+++ b/torchtune/todo.txt
@@ -1,20 +1,25 @@
 1. kv_cache eviction functionality - must be included in recipe
 
+torchtune/modules/loss/cross_entropy_loss.py
+torchtune/datasets/_medusa.py
+recipes/configs/llama3_3/llama_medusa.yaml
 
-A       recipes/configs/llama3_3/llama_medusa.yaml
+A       
 M       recipes/full_finetune_distributed.py
 M       torchtune/datasets/__init__.py
-A       torchtune/datasets/_medusa.py
+A       
 M       torchtune/models/convert_weights.py
 M       torchtune/models/llama3_1/__init__.py
 M       torchtune/models/llama3_1/_component_builders.py
 M       torchtune/models/llama3_1/_model_builders.py
 M       torchtune/modules/__init__.py
 M       torchtune/modules/loss/__init__.py
-M       torchtune/modules/loss/cross_entropy_loss.py
+M       
 M       torchtune/modules/transformer.py
 
 
 """
 Implementation strategy: the Medusa heads need the (last_hidden_state,  hidden_dim, vocab_size) from the last transformer layer. The hidden_dim, vocab_size are known during the component_building phase. Only the last_hidden_state needs to be obtained. The last TransformerDecoder block can return this separately but will have to be initialized separately to expose this. The hidden_state will have to be extracted and so on. An alternative implementation would be to add that as the last layer of the TransformerDecoder to create the MedusaTransformerDecoder from which the [base_output, stacked_medusa_logits] can be extracted. This was the original implementation chosen during the hackathon. The second implementation will be tried right now.
 """
+
+cd /home/ubuntu/vanshaj/Medusa && CUDA_VISIBLE_DEVICES=4,5 PYTHONPATH=/home/ubuntu/vanshaj/Medusa:$PYTHONPATH /home/ubuntu/vanshaj/medusaenv/bin/python -m torch.distributed.run --nproc_per_node=1 medusa/train/train_legacy.py --model_name_or_path TinyLlama/TinyLlama-1.1B-Chat-v1.0 --data_path sample.json --bf16 True --output_dir test --num_train_epochs 2 --per_device_train_batch_size 4 --per_device_eval_batch_size 4 --gradient_accumulation_steps 4 --save_strategy "no" --learning_rate 1e-3 --weight_decay 0.0 --warmup_ratio 0.1 --lr_scheduler_type "cosine" --logging_steps 1 --tf32 True --model_max_length 1024 --lazy_preprocess True --medusa_num_heads 2 --medusa_num_layers 1
